--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,93 @@
-# Logs
-logs
+# ===================================================================
+# Arquivos de Sistema Operacional e IDEs (macOS, Linux, Windows, VSCode, etc.)
+# ===================================================================
+.DS_Store
+.AppleDouble
+.LSOverride
+Thumbs.db
+ehthumbs.db
+desktop.ini
+*.swp
+*~
+*.orig
+
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# JetBrains (PyCharm, WebStorm)
+.idea/
+
+# ===================================================================
+# Python (Ambientes Virtuais, Caches, Pacotes)
+# ===================================================================
+
+# Ambientes Virtuais
+.venv/
+venv/
+env/
+.env/
+.env
+
+# Cache do Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Arquivos de distribuição / build
+/build/
+/dist/
+/downloads/
+/eggs/
+*.egg-info/
+*.egg
+pip-wheel-metadata/
+
+# Arquivos do Jupyter Notebook
+.ipynb_checkpoints
+
+# Logs e bancos de dados locais
 *.log
+*.sqlite3
+*.db
+instance/
+
+# =Settings (ex: Django)
+*.local_settings.py
+local_settings.py
+
+# ===================================================================
+# React.js / Node.js (Dependências, Logs, Builds)
+# ===================================================================
+
+# Dependências (a pasta mais importante a ser ignorada)
+/node_modules/
+
+# Arquivos de build (Create React App, Vite, etc.)
+# /build/ (Já incluído na seção Python)
+/dist/ (Já incluído na seção Python)
+.next/ (Para Next.js)
+.output/ (Para Nuxt.js)
+/coverage/
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Arquivos de ambiente local (NUNCA envie segredos para o Git)
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Yarn PnP (Plug'n'Play)
+.pnp/
+.pnp.js
+.pnp.cjs
